--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ section.pricing {
   transition: all 0.2s;
 }
 
-ul {
+/* ul {
   list-style: none;
 }
 
@@ -66,7 +66,7 @@ ul .text-muted::before{
   content: '❌';
   color: rgb(252, 53, 53);
   font-weight: bolder;
-}
+} */
 
 /* Hover Effects on Card */
 
